--- a/springEmp/.settings/org.eclipse.wst.common.component
+++ b/springEmp/.settings/org.eclipse.wst.common.component
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="springEmp-0.0.1-SNAPSHOT">
+        
+    <wb-module deploy-name="emp-1.0.0-BUILD-SNAPSHOT">
+                
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <property name="context-root" value="springEmp"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+                
         <property name="java-output-path" value="/springEmp/build/classes"/>
+        <property name="context-root" value="emp"/>
+            
     </wb-module>
+    
 </project-modules>
